--- a/brewgui.css
+++ b/brewgui.css
@@ -55,21 +55,20 @@
 
 .brew-message {
     margin: 5px;
-    padding: 10px 4px 0px 4px; 
+    padding: 10px 4px 10px 4px; 
     cursor: pointer;
     z-index: 2;
 }
 
 .brew-message-extended {
-    padding-bottom: -35px;
+    width: 400px;
 }
 
 .brew-message-body {
     font-size: 15px;
     display: none;
-    padding: 30px 0px 10px 0px;
     position: relative;
-    top: -30px;
-    width: 400px;
+    padding: 5px 0px;
+    width: 400px; 
     z-index: 1;
 }
