--- a/brewgui.css
+++ b/brewgui.css
@@ -54,21 +54,32 @@
 }
 
 .brew-message {
-    margin: 5px;
-    padding: 10px 4px 10px 4px; 
+    width: 170px;
+    margin: 5px 0px;
+    padding: 10px 4px 10px 24px; 
+    left: -10px;
+    height: 20px;
     cursor: pointer;
     z-index: 2;
+    position: relative;
 }
 
 .brew-message-extended {
-    width: 400px;
+    left: 0px;
+}
+
+.brew-message-open {
+    left: 0px;
+    width: 250px;
+    height: 100px;
 }
 
 .brew-message-body {
+    width: 170px;
+    left: -24px;
     font-size: 15px;
+    padding: 10px 4px 10px 24px; 
     display: none;
     position: relative;
-    padding: 5px 0px;
-    width: 400px; 
     z-index: 1;
 }
