--- a/deploy/brewgui.css
+++ b/deploy/brewgui.css
@@ -3,6 +3,15 @@
     position: relative;
 }
 
+#version {
+    position: absolute;
+    bottom: 4px;
+    left: 4px;
+    font-family: 'Press Start 2P';
+    font-size: 8pt;
+    color: white;
+}
+
 .brew-window {
     font-family: 'Press Start 2P';
     font-size: 14pt;
